--- a/src/mainscreen.ui
+++ b/src/mainscreen.ui
@@ -29,7 +29,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QListWidget" name="listWidget"/>
+    <widget class="QListWidget" name="listTasks"/>
    </item>
    <item>
     <widget class="QPushButton" name="buttonAddTask">
