--- a/src/simpletasklistwidget.ui
+++ b/src/simpletasklistwidget.ui
@@ -6,16 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>71</height>
+    <width>285</width>
+    <height>27</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="spacing">
+    <number>2</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QCheckBox" name="checkDone">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string/>
      </property>
@@ -30,20 +42,75 @@
    </item>
    <item>
     <widget class="QPushButton" name="buttonOptions">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>Options</string>
+      <string notr="true"/>
+     </property>
+     <property name="icon">
+      <iconset resource="icons.qrc">
+       <normaloff>:/icons/icons/48/configuration.png</normaloff>:/icons/icons/48/configuration.png</iconset>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="buttonExpand">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>Ex</string>
+      <string notr="true"/>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <resources/>
- <connections/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
+ <connections>
+  <connection>
+   <sender>buttonExpand</sender>
+   <signal>clicked()</signal>
+   <receiver>simpleTaskListWidget</receiver>
+   <slot>setExpandedToggle()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>255</x>
+     <y>13</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>142</x>
+     <y>13</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkDone</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>simpleTaskListWidget</receiver>
+   <slot>changeTaskDone(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>9</x>
+     <y>13</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>142</x>
+     <y>13</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>setExpandedToggle()</slot>
+  <slot>changeTaskDone(bool)</slot>
+ </slots>
 </ui>
