working on feel for android

--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/icons">
         <file alias="arrow-down">icons/48/arrow-down.png</file>
         <file alias="arrow-up">icons/48/arrow-up.png</file>
-        <file>icons/48/configuration.png</file>
+        <file alias="configuration">icons/48/configuration.png</file>
+        <file alias="main">icons/128/main.png</file>
     </qresource>
 </RCC>
