--- a/src/mainscreen.ui
+++ b/src/mainscreen.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>mainScreen</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="icons.qrc">
+    <normaloff>:/icons/main</normaloff>:/icons/main</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -41,7 +45,9 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonAddTask</sender>
