--- a/src/icons.qrc
+++ b/src/icons.qrc
@@ -4,5 +4,6 @@
         <file alias="arrow-up">icons/48/arrow-up.png</file>
         <file alias="configuration">icons/48/configuration.png</file>
         <file alias="main">icons/128/main.png</file>
+        <file alias="delete">icons/48/delete.png</file>
     </qresource>
 </RCC>
