--- a/src/mainscreen.ui
+++ b/src/mainscreen.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>mainScreen</string>
+   <string>Simple Task Manager</string>
   </property>
   <property name="windowIcon">
    <iconset resource="icons.qrc">
