--- a/src/simpletaskinfowindow.ui
+++ b/src/simpletaskinfowindow.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SimpleTaskAddWindow</class>
- <widget class="QWidget" name="SimpleTaskAddWindow">
+ <class>SimpleTaskInfoWindow</class>
+ <widget class="QWidget" name="SimpleTaskInfoWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>298</width>
-    <height>221</height>
+    <width>305</width>
+    <height>317</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,21 +15,37 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_2">
+     <property name="locale">
+      <locale language="German" country="Germany"/>
+     </property>
      <property name="text">
-      <string>New Task Name:</string>
+      <string>Task Info</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::AutoText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineTaskName">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
      </property>
-    </widget>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="lineName"/>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Name:</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -60,7 +76,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="buttonAdd">
+      <widget class="QPushButton" name="buttonAccept">
        <property name="minimumSize">
         <size>
          <width>110</width>
@@ -68,7 +84,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Add</string>
+        <string>Accept</string>
        </property>
       </widget>
      </item>
@@ -92,39 +108,39 @@
  <resources/>
  <connections>
   <connection>
-   <sender>buttonCancel</sender>
+   <sender>buttonAccept</sender>
    <signal>clicked()</signal>
-   <receiver>SimpleTaskAddWindow</receiver>
-   <slot>close()</slot>
+   <receiver>SimpleTaskInfoWindow</receiver>
+   <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>209</x>
-     <y>233</y>
+     <x>239</x>
+     <y>81</y>
     </hint>
     <hint type="destinationlabel">
-     <x>199</x>
-     <y>149</y>
+     <x>152</x>
+     <y>158</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>buttonAdd</sender>
+   <sender>buttonCancel</sender>
    <signal>clicked()</signal>
-   <receiver>SimpleTaskAddWindow</receiver>
-   <slot>acceptTask()</slot>
+   <receiver>SimpleTaskInfoWindow</receiver>
+   <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>237</x>
-     <y>85</y>
+     <x>123</x>
+     <y>81</y>
     </hint>
     <hint type="destinationlabel">
-     <x>151</x>
-     <y>57</y>
+     <x>152</x>
+     <y>158</y>
     </hint>
    </hints>
   </connection>
  </connections>
  <slots>
-  <slot>acceptTask()</slot>
+  <slot>accept()</slot>
  </slots>
 </ui>
