--- a/src/simpletaskinfowidget.ui
+++ b/src/simpletaskinfowidget.ui
@@ -54,12 +54,53 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Description</string>
+        <string>Description:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineDescription"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QCheckBox" name="checkDone">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Done:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Creation:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QDateTimeEdit" name="dateTimeCreation">
+       <property name="readOnly">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QDateTimeEdit" name="dateTimeDone"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>Due:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QDateTimeEdit" name="dateTimeDue"/>
      </item>
     </layout>
    </item>
@@ -155,9 +196,26 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>checkDone</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>SimpleTaskInfoWidget</receiver>
+   <slot>changeTaskDone(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>213</x>
+     <y>109</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>168</x>
+     <y>176</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>accept()</slot>
   <slot>cancel()</slot>
+  <slot>changeTaskDone(bool)</slot>
  </slots>
 </ui>
