--- a/src/simpletaskinfowidget.ui
+++ b/src/simpletaskinfowidget.ui
@@ -102,6 +102,23 @@
      <item row="5" column="1">
       <widget class="QDateTimeEdit" name="dateTimeDue"/>
      </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Priority:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QSpinBox" name="spinBoxPriority">
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>10</number>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
