--- a/src/simpletasklistwidget.ui
+++ b/src/simpletasklistwidget.ui
@@ -52,6 +52,22 @@
     </spacer>
    </item>
    <item>
+    <spacer name="spacerSubTask">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>5</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <property name="spacing">
       <number>0</number>
