--- a/src/simpletaskinfowidget.ui
+++ b/src/simpletaskinfowidget.ui
@@ -119,6 +119,13 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="labelDebug">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
