--- a/src/simpletasklistwidget.ui
+++ b/src/simpletasklistwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>337</width>
-    <height>38</height>
+    <height>45</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -156,6 +156,13 @@
            </property>
           </widget>
          </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="layoutPriority">
+         <property name="spacing">
+          <number>0</number>
+         </property>
         </layout>
        </item>
        <item>
